examples/bad/runtime_error_modulo_by_zero.ps
int i = 5;

while i > -1 {
    println(10 % i);
    i = i - 1;
}